WS_INTEGRATION/Sandbox/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Economic Engagement</fullName>
        <description>Default process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Cultivating</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Linkage</fullName>
        </values>
        <values>
            <fullName>Negotiating</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Licensing Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Confidential Activities</fullName>
        </values>
        <values>
            <fullName>Coordination</fullName>
        </values>
        <values>
            <fullName>License Abandoned</fullName>
        </values>
        <values>
            <fullName>License Negotiating</fullName>
        </values>
        <values>
            <fullName>License Signed</fullName>
        </values>
        <values>
            <fullName>License Term Sheet</fullName>
        </values>
        <values>
            <fullName>Non Confidential Activity</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CDA_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links the Opportunity to a specific CDA pulled from Wellspring</description>
        <inlineHelpText>This would be an engagement on the account. Look for the a similarly named account if you cannot find the CDA.</inlineHelpText>
        <label>CDA Record</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Opportunities with CDAs</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the campaign that this opportunity originated from.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invention__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The specific invention related to this opportunity</description>
        <label>Invention</label>
        <referenceTo>InventionOLD__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KUContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The KU contact that is working with this particular company</description>
        <inlineHelpText>The KU contact that is working with this particular company</inlineHelpText>
        <label>KUContact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>KU Contacts</value>
            </filterItems>
            <infoMessage>This person should be a KU employee.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Startup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option &amp; Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWIFT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philanthropy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional &amp; Continuing Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capstone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Awareness</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Sheet_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Term Sheet Signed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Invention__c</columns>
        <columns>Campaign__c</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Life_Sciences</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>Life Sciences</value>
        </filters>
        <label>Life Sciences</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Economic_Engagement</fullName>
        <active>true</active>
        <businessProcess>Economic Engagement</businessProcess>
        <label>Economic Engagement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Licensing</fullName>
        <active>true</active>
        <businessProcess>Licensing Process</businessProcess>
        <label>Licensing</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>